--- a/cylayers/cykohonen/CMakeLists.txt
+++ b/cylayers/cykohonen/CMakeLists.txt
@@ -2,5 +2,5 @@ set ( cycohonen_src cykohonen.cpp )
 
 include_directories(../common)
 
-add_library ( cykohonen shared ${cycohonen_src} )
+add_library ( cykohonen SHARED ${cycohonen_src} )
 
