--- a/cylayers/cyperceptron/CMakeLists.txt
+++ b/cylayers/cyperceptron/CMakeLists.txt
@@ -2,5 +2,5 @@ set ( cyperceptron_src cyperceptron.cpp )
 
 include_directories(../common)
 
-add_library ( cyperceptron shared ${cyperceptron_src} )
+add_library ( cyperceptron SHARED ${cyperceptron_src} )
 
